[package]
name = "Rustache"
version = "0.1.0"
authors = ["0xa48rx394r83e9"]
edition = "2022"
description = "A high-performance, in-memory caching system implemented in Rust"
readme = "README.md"
repository = "https://github.com/0xa48rx394r83e9/Rustache"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"